--- a/index.html
+++ b/index.html
@@ -1638,7 +1638,7 @@ summary {
 
 
 <p>Landing page for my portfolio. Below will be my three deliverables.</p>
-<p><a href="https://vthao9.github.io/portfolio/portfolio1"><code>Portfolio 1</code></a> <a href="https://vthao9.github.io/portfolio/portfolio2"><code>Portfolio 2</code></a> <a href="https://vthao9.github.io/portfolio/portfolio3"><code>Portfolio 3</code></a></p>
+<p><a href="https://vthao9.github.io/portfolio/portfolio"><code>Portfolio 1</code></a> <a href="https://vthao9.github.io/portfolio/portfolio2"><code>Portfolio 2</code></a> <a href="https://vthao9.github.io/portfolio/portfolio3"><code>Portfolio 3</code></a></p>
 <p>This portfolio is about a dataset on legal and illegal drugs. The dataset was surveyed on 1885 respondent to see if they have taken any of these hard drugs.</p>
 
 
